# swagger.yaml
@@ -243,11 +243,20 @@ paths:
         '200':
           description: OK
 
-  /user/:user_id:
+  /v1/users/:user_id:
     get:
       summary: Find user by id.
       tags:
         - Users
+      responses: 
+        '200':
+          description: OK
+  
+  /api/v1/users:
+    get:
+      summary: Find all users
+      tags:
+        - users
       responses: 
         '200':
           description: OK
